--- a/CardsUILib/res/layout/cards_view.xml
+++ b/CardsUILib/res/layout/cards_view.xml
@@ -1,7 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <com.fima.cardsui.views.QuickReturnListView
         android:id="@+id/listView"
@@ -23,4 +20,4 @@
         android:paddingTop="8dp"
         android:visibility="gone" />
 
-</FrameLayout>
+</merge>
