--- a/CardsUILib/res/layout/cards_view.xml
+++ b/CardsUILib/res/layout/cards_view.xml
@@ -1,23 +1,10 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <com.fima.cardsui.views.QuickReturnListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="4dp"
-        android:listSelector="@android:color/transparent"
-        android:overScrollMode="never"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:scrollbars="vertical" >
-    </com.fima.cardsui.views.QuickReturnListView>
-
-    <FrameLayout
-        android:id="@+id/sticky"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="8dp"
-        android:visibility="gone" />
-
-</merge>
+<com.fima.cardsui.views.QuickReturnListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipChildren="false"
+    android:divider="@null"
+    android:dividerHeight="4dp"
+    android:listSelector="@null"
+    android:overScrollMode="never"
+    android:scrollbars="vertical" />
