--- a/CardsUILib/res/layout/item_stack.xml
+++ b/CardsUILib/res/layout/item_stack.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
+    android:clipChildren="false"
     android:orientation="vertical"
     android:padding="15dp" >
 
@@ -19,6 +19,11 @@
     <RelativeLayout
         android:id="@+id/stackContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:clipChildren="false" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
 </LinearLayout>
